--- a/WordToGitHub/src/app/file/file-list.component.scss
+++ b/WordToGitHub/src/app/file/file-list.component.scss
@@ -1,231 +1,109 @@
 ﻿@import '../../styles/mixins.scss';
 @import '../../styles/theme.scss';
 
-.ms-landing-page__main {
-    margin-bottom: 20px;
+.file-list-component {
+    &__separator {
+        margin: 0 auto;
+        width: calc(100% - 30px);
+        border: none;
+        border-top: 1px solid $background-light;
+    }
+
+    &__files h2 {
+        padding: $default-spacing;
+    }
+
+    &__branches {
+        padding: $default-spacing;
+
+        h2 {
+            padding-bottom: $default-spacing;
+        }
+
+        select {
+            border: 1px solid $background-light;
+            padding: $default-spacing/2;
+            width: 100%;
+        }
+    }
 }
 
-/*.ms-landing-page__header--center {
-    flex: 1 1 auto;
-    display: inline-flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.ms-landing-page__header--center p {
-    padding: 0 10px;
-    flex: 1 0 0px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: left;
-    cursor: pointer;
-    -moz-transition: background ease 0.1s, color ease 0.1s;
-    -o-transition: background ease 0.1s, color ease 0.1s;
-    -webkit-transition: background ease 0.1s, color ease 0.1s;
-    transition: background ease 0.1s, color ease 0.1s;
-    padding: 10px;
-}
-
-.ms-landing-page__header--center p:active, .ms-landing-page__header--center p:hover {
-    background: #c7e0f4;
-    color: #000;
-    cursor: pointer;
-}
-
-.ms-landing-page__header--center p:active {
-    background: #c7e0f4;
-    -moz-transform: scale3d(0.98, 0.98, 1);
-    -ms-transform: scale3d(0.98, 0.98, 1);
-    -o-transform: scale3d(0.98, 0.98, 1);
-    -webkit-transform: scale3d(0.98, 0.98, 1);
-    transform: scale3d(0.98, 0.98, 1);
-}
-
-.ms-landing-page__header--center p.disabled {
-    opacity: 0.6;
-    pointer-events: none;
-    cursor: not-allowed;
-}
-
-.ms-landing-page__header--center p.disabled:active, .ms-landing-page__header--center p.disabled:hover {
-    background: transparent;
-}
-
-.ms-landing-page__header--center p.disabled:active {
-    -moz-transform: none;
-    -ms-transform: none;
-    -o-transform: none;
-    -webkit-transform: none;
-    transform: none;
-}*/
-
-.ms-landing-page__content {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 100%;
-    flex: 1 1 0;
-    min-height: 180px;
-}
-
-.ms-landing-page__content__title {
-    padding: 20px;
-}
-
-.ms-landing-page__footer {
-    order: 2;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.ms-landing-page__footer--left {
-    -moz-transition: background ease 0.1s, color ease 0.1s;
-    -o-transition: background ease 0.1s, color ease 0.1s;
-    -webkit-transition: background ease 0.1s, color ease 0.1s;
-    transition: background ease 0.1s, color ease 0.1s;
-    display: inline-flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex: 1 0 0px;
-    padding: 20px;
-}
-
-.ms-landing-page__footer--left:active, .ms-landing-page__footer--left:hover {
-    background: #005ca4;
-    cursor: pointer;
-}
-
-.ms-landing-page__footer--left:active {
-    background: #005ca4;
-}
-
-.ms-landing-page__footer--left.disabled {
-    opacity: 0.6;
-    pointer-events: none;
-    cursor: not-allowed;
-}
-
-.ms-landing-page__footer--left.disabled:active, .ms-landing-page__footer--left.disabled:hover {
-    background: transparent;
-}
-
-.ms-landing-page__footer--left img {
-    width: 40px;
-    height: 60px;
-}
-
-.ms-landing-page__footer--left h1 {
-    flex: 1 0 0px;
-    margin-left: 15px;
-    text-align: left;
-    width: auto;
-    max-width: auto;
-    overflow: hidden;
-    white-space: nowrap;
-    -ms-text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-}
-
-.ms-landing-page__footer--right {
-    -moz-transition: background ease 0.1s, color ease 0.1s;
-    -o-transition: background ease 0.1s, color ease 0.1s;
-    -webkit-transition: background ease 0.1s, color ease 0.1s;
-    transition: background ease 0.1s, color ease 0.1s;
-    padding: 29px 20px;
-}
-
-.ms-landing-page__footer--right:active, .ms-landing-page__footer--right:hover {
-    background: #005ca4;
-    cursor: pointer;
-}
-
-.ms-landing-page__footer--right:active {
-    background: #005ca4;
-}
-
-.ms-landing-page__footer--right.disabled {
-    opacity: 0.6;
-    pointer-events: none;
-    cursor: not-allowed;
-}
-
-.ms-landing-page__footer--right.disabled:active, .ms-landing-page__footer--right.disabled:hover {
-    background: transparent;
-}
-
-.ms-SearchBox {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
-
-
-.ms-SearchBox-field {
-    border: none;
-    width: 100vw;
-}
-
-
-.repoIcon {
-    float: left;
-    width: 10%;
-}
-
-
-.item {
-}
-
-.item__text {
-    height: 5px;
-    margin-bottom: 5px;
-    padding-left: 1px;
-}
-
-.item__img {
-    width: 60px;
-    height: 60px;
-    background-color: #F4F4F4;
-    display: block;
-    margin-bottom: 10px;
-}
-
-hr {
-    margin: 0 auto;
-    width: calc(100% - 42px);
-    border: none;
-    border-top: 1px solid #DEDEDE;
-}
-
-.ms-ListItem-actions {
-    right: 50px;
-}
-
-.footer {
-    margin-top: 20px;
-    position: fixed;
-    bottom: 0;
+.file-list-command-bar {
+    @include inline-flex();
+    list-style-type: none;
     width: 100%;
-    height: 60px;
-    display: block;
-    box-sizing: border-box;
+    border-bottom: 1px solid $background-light;
+
+    &__command {
+        padding: (40px - $default-spacing)/2 $default-spacing;
+        @include focus-states($accent-background-primary, $accent-foreground-primary);
+
+        &:hover i {
+            color: $accent-foreground-primary;
+        }
+
+        &--text {
+            flex: 1 1 0px;
+            @include ellipsis();
+
+            i {
+                padding-right: $default-spacing/2;
+            }
+        }
+    }
 }
 
+.file-list-item {
+    @include inline-flex();
+    padding: $default-spacing;
+    width: 100%;
+    cursor: pointer;
+    box-shadow: none;
 
-#word-github-brandbar {
-    background: transparent no-repeat center center;
-    background-image: url("assets/images/black_brandbar.png");
-    background-size: cover;
-    height: 60px;
-}
+    @include focus-states($background-lightest);
 
-#branchDropdown {
-    width: calc(100% - 42px);
-    height: 40px;
-    margin: auto;
-    padding: 7px;
-    border: solid 1px #DEDEDE;
-    margin-left: 20px; /*hack*/
+    &__primary-text {
+        @include ellipsis();
+        position: static;
+        padding: 0;
+    }
+
+    &__content {
+        flex: 1 0 0px;
+        padding-right: $default-spacing;
+    }
+
+    &__icon {
+        position: static;
+        padding-right: $default-spacing;
+        color: rgba($foreground-primary, 0.8);
+
+        i {
+            top: 2px;
+        }
+    }
+
+    &__actions {
+        max-width: 80px;
+        position: static;
+    }
+
+    &__action {
+        position: static;
+        @include focus-states(transparent);
+
+        i {
+            top: 2px;
+        }
+    }
+
+
+    &--separator {
+        padding: 0;
+        border-bottom: 1px solid $background-light;
+    }
+
+    &--alternate {
+        @include focus-states($background-lightest, $accent-background-primary);
+    }
 }
