--- a/WordToGitHub/src/app/repo/repo-list.component.html
+++ b/WordToGitHub/src/app/repo/repo-list.component.html
@@ -1,13 +1,14 @@
-﻿<div class="repo-list-search ms-SearchBox">
+﻿<div class="repo-list-component__search ms-SearchBox">
     <input class="repo-list-search__input ms-SearchBox-field ms-font-s-plus" type="search" [(ngModel)]="query">
     <label class="repo-list-search__label ms-SearchBox-label ms-font-s-plus" [hidden]="query"><i class="ms-SearchBox-icon ms-Icon ms-Icon--search"></i>Search for repositories by name or url.</label>
 </div>
-<section class="repo-list-component" *ngIf="favoriteRepositories.length > 0">
-    <h1 class="repo-list-component__title ms-font-xl ms-fontColor-themeDarker ms-fontWeight-light">My favorites</h1>
+
+<section class="repo-list-component__repos" *ngIf="favoriteRepositories.length > 0">
+    <h2 class="ms-font-l ms-fontColor-themeDarker ms-fontWeight-light">My favorites</h2>
     <ul class="ms-List">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of favoriteRepositories">
             <div class="repo-list-item__content" (click)="onSelect(repository)">
-                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m-plus">{{repository.name}}</p>
+                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m">{{repository.name}}</p>
                 <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-fontColor-themeDark ms-font-s-plus">@officedev</p>
             </div>
             <div class="repo-list-item__actions ms-ListItem-actions">
@@ -16,13 +17,15 @@
         </li>
     </ul>
 </section>
-<hr class="repo-list-component__separator" />
-<section class="repo-list-component">
-    <h1 class="repo-list-component__title ms-font-xl ms-fontColor-themeDarker ms-fontWeight-light">Repositories</h1>
+
+<hr class="repo-list-component__separator" *ngIf="favoriteRepositories.length > 0" />
+
+<section class="repo-list-component__repos">
+    <h2 class="ms-font-l ms-fontColor-themeDarker ms-fontWeight-light">Repositories</h2>
     <ul class="ms-List">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of repositories">
             <div class="repo-list-item__content" (click)="onSelect(repository)">
-                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m-plus">{{repository.name}}</p>
+                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m">{{repository.name}}</p>
                 <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-fontColor-themeDark ms-font-s-plus">@officedev</p>
                 <p class="repo-list-item__tertiary-text ms-ListItem-tertiaryText ms-font-s">{{repository.description}}</p>
             </div>
