--- a/WordToGitHub/src/styles/theme.scss
+++ b/WordToGitHub/src/styles/theme.scss
@@ -11,6 +11,10 @@ $background-white: #FFFFFF;
 /* Foreground Colors */
 $foreground-primary: #333333;
 $foreground-white: #FFFFFF;
+$foreground-light: #666666;
+$foreground-lighter: #999999;
+$foreground-lightest: #BABABA;
 
 /* Accent Colors */
-$accent-primary: #0078d7;
+$accent-background-primary: #0078d7;
+$accent-foreground-primary: #deecf9;
