updating system configuration to help dialog files or workers

--- a/WordToGitHub/src/app/repo/repo.component.html
+++ b/WordToGitHub/src/app/repo/repo.component.html
@@ -35,3 +35,10 @@
         </li>
     </ul>
 </section>
+
+<!--<section class="hamburger-menu">
+    <div class="hamburger-menu__profile">
+        <div class="profile__image"></div>
+        <div class="profule"
+    </div>
+</section>-->
