--- a/WordToGitHub/src/app/repo/repo.component.html
+++ b/WordToGitHub/src/app/repo/repo.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <section class="repo-list-component__repos" *ngIf="favoriteRepositories.length > 0">
-    <h2 class="ms-font-l ms-fontColor-themeDarker ms-fontWeight-light">My favorites</h2>
+    <h2 class="ms-font-xl ms-fontWeight-light">My favorites</h2>
     <ul class="ms-List">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of favoriteRepositories">
             <div class="repo-list-item__content" (click)="onSelect(repository)">
@@ -21,12 +21,12 @@
 <hr class="repo-list-component__separator" *ngIf="favoriteRepositories.length > 0" />
 
 <section class="repo-list-component__repos">
-    <h2 class="ms-font-l ms-fontColor-themeDarker ms-fontWeight-light">Repositories</h2>
+    <h2 class="ms-font-xl ms-fontWeight-light">Repositories</h2>
     <ul class="ms-List">
         <li class="repo-list-item ms-ListItem" *ngFor="let repository of (repositories | async)">
             <div class="repo-list-item__content" (click)="onSelect(repository)">
-                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-font-m">{{repository.name}}</p>
-                <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-fontColor-themeDark ms-font-s-plus">@{{repository.owner.login}}</p>
+                <p class="repo-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themeDark ms-font-m-plus">{{repository.name}}</p>
+                <p class="repo-list-item__secondary-text ms-ListItem-secondaryText ms-font-s-plus">@{{repository.owner.login}}</p>
                 <p class="repo-list-item__tertiary-text ms-ListItem-tertiaryText ms-font-s">{{repository.description}}</p>
             </div>
             <div class="repo-list-item__actions ms-ListItem-actions">
