UI Changes and exception interceptor

--- a/WordToGitHub/src/app/file/file-list.component.html
+++ b/WordToGitHub/src/app/file/file-list.component.html
@@ -46,15 +46,15 @@
         </li>
         <li class="file-list-item--separator"></li>
         <li class="file-list-item file-list-item--alternate ms-ListItem">
-            <div class="file-list-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themeDark ms-Icon--plus"></i></div>
+            <div class="file-list-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themePrimary ms-Icon--plus"></i></div>
             <div class="file-list-item__content">
-                <p class="file-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themeDark ms-font-m">Add a new file</p>
+                <p class="file-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m">Add a new file</p>
             </div>
         </li>
         <li class="file-list-item file-list-item--alternate ms-ListItem">
-            <div class="file-list-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themeDark ms-Icon--plus"></i></div>
+            <div class="file-list-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themePrimary ms-Icon--plus"></i></div>
             <div class="file-list-item__content">
-                <p class="file-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themeDark ms-font-m">Add a new folder</p>
+                <p class="file-list-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m">Add a new folder</p>
             </div>
         </li>
     </ul>
