--- a/WordToGitHub/src/styles/mixins/background.fill.scss
+++ b/WordToGitHub/src/styles/mixins/background.fill.scss
@@ -3,3 +3,22 @@
     @content;
     background-size: $type;
 }
+
+@mixin background-image-circle($size, $url: '') {
+    @if $url {
+        background-image: url($url);
+    }
+
+    width: $size;
+    height: $size;
+    border-radius: 100%;
+}
+
+@mixin background-image-square($size, $url: '') {
+    @if $url {
+        background-image: url($url);
+    }
+
+    width: $size;
+    height: $size;
+}
