--- a/WordToGitHub/src/app/components/hamburger/hamburger.component.html
+++ b/WordToGitHub/src/app/components/hamburger/hamburger.component.html
@@ -1,43 +1,28 @@
 ﻿<section class="hamburger-menu" [ngClass]="{'hamburger-menu--shown': (isShown|async)}">
     <div class="hamburger-menu__close" (click)="closeMenu()"><i class="ms-Icon ms-Icon-large ms-Icon--menu"></i></div>
     <div class="hamburger-menu__profile">
-        <div class="profile__image" [ngStyle]="{'background-image': 'url('+ profile?.avatar_url +')'}"></div>
-        <h2 class="profile__name ms-font-xl">{{profile?.name}}</h2>
-        <p class="profile__handle ms-font-m">@{{profile?.login}}</p>
+        <div class="profile__image" [ngStyle]="{'background-image': 'url('+ profile?.user?.avatar_url +')'}"></div>
+        <h2 class="profile__name ms-font-xl">{{profile?.user?.name}}</h2>
+        <p class="profile__handle ms-font-m">@{{profile?.user?.login}}</p>
     </div>
     <div class="hamburger-menu__container">
         <ul class="menu-list">
             <li><h3 class="menu-list__title ms-font-l"><i class="ms-Icon ms-Icon-large ms-Icon--teamwork"></i>My Organizations</h3></li>
             <li class="menu-list__item menu-list__item--inline-image" (click)="onSelectOrg(org)">
-                <div class="menu-list__thumb" [ngStyle]="{'background-image': 'url('+ profile?.avatar_url +')'}"></div>
+                <div class="menu-list__thumb" [ngStyle]="{'background-image': 'url('+ profile?.user?.avatar_url +')'}"></div>
                 <p class="ms-font-m-plus">Personal</p>
             </li>
-            <li class="menu-list__item menu-list__item--inline-image" *ngFor="let org of (orgs | async)" (click)="onSelectOrg(org)">
+            <li class="menu-list__item menu-list__item--inline-image" *ngFor="let org of profile?.orgs" (click)="onSelectOrg(org)">
                 <div class="menu-list__thumb" [ngStyle]="{'background-image': 'url('+ org?.avatar_url +')'}"></div>
                 <p class="ms-font-m-plus">{{org.login}}</p>
             </li>
         </ul>
-        <ul class="menu-list" >
+        <ul class="menu-list">
             <li><h3 class="menu-list__title ms-font-l"><i class="ms-Icon ms-Icon-large ms-Icon--sections"></i>Favorite repositories</h3></li>
-            <!--<li class="menu-list__item" *ngFor="let repository of (repositories | async)" (click)="onSelectRepository(repository)">
+            <li class="menu-list__message ms-font-m" *ngIf="favoriteRepositories != null">This is where you'll see your favorite repositories. Click the pin next to a repository name to add it here.</li>
+            <li class="menu-list__item" *ngFor="let repository of favoriteRepositories" (click)="onSelectRepository(repository)">
                 <p class="ms-font-m">{{repository.name}}</p>
                 <p class="ms-font-s">@{{repository.owner.login}}</p>
-            </li>-->
-            <li class="menu-list__item">
-                <p class="ms-font-m">Repository 1</p>
-                <p class="ms-font-s">@OfficeDev</p>
-            </li>
-            <li class="menu-list__item">
-                <p class="ms-font-m">Repository 2</p>
-                <p class="ms-font-s">@OfficeDev</p>
-            </li>
-            <li class="menu-list__item">
-                <p class="ms-font-m">Repository 3</p>
-                <p class="ms-font-s">@OfficeDev</p>
-            </li>
-            <li class="menu-list__item">
-                <p class="ms-font-m">Repository 4</p>
-                <p class="ms-font-s">@OfficeDev</p>
             </li>
             <li class="menu-list__overflow ms-font-s">See all repositories</li>
         </ul>
