--- a/WordToGitHub/src/app/components/hamburger/hamburger.component.html
+++ b/WordToGitHub/src/app/components/hamburger/hamburger.component.html
@@ -1,5 +1,5 @@
-﻿<section class="hamburger-menu" [ngClass]="{'hamburger-menu--shown': (isShown|async)}">
-    <div class="hamburger-menu__close" (click)="closeMenu()"><i class="ms-Icon ms-Icon-large ms-Icon--menu"></i></div>
+﻿<section class="hamburger-menu" [ngClass]="{'hamburger-menu--shown': isViewModeSet || (isShown|async)}">
+    <div class="hamburger-menu__close" [hidden]="isViewModeSet" (click)="closeMenu()"><i class="ms-Icon ms-Icon-large ms-Icon--menu"></i></div>
     <div class="hamburger-menu__profile">
         <div class="profile__image" [ngStyle]="{'background-image': 'url('+ profile?.user?.avatar_url +')'}"></div>
         <h2 class="profile__name ms-font-xl">{{profile?.user?.name}}</h2>
@@ -8,28 +8,29 @@
     <div class="hamburger-menu__container">
         <ul class="menu-list">
             <li><h3 class="menu-list__title ms-font-l"><i class="ms-Icon ms-Icon-large ms-Icon--teamwork"></i>My Organizations</h3></li>
-            <li class="menu-list__item menu-list__item--inline-image" (click)="onSelectOrg(org)">
+            <li class="menu-list__item menu-list__item--inline-image" (click)="onSelectOrg()">
                 <div class="menu-list__thumb" [ngStyle]="{'background-image': 'url('+ profile?.user?.avatar_url +')'}"></div>
                 <p class="ms-font-m-plus">Personal</p>
             </li>
-            <li class="menu-list__item menu-list__item--inline-image" *ngFor="let org of profile?.orgs" (click)="onSelectOrg(org)">
+            <li class="menu-list__item menu-list__item--inline-image" *ngFor="let org of profile?.orgs" (click)="selectOrg(org)">
                 <div class="menu-list__thumb" [ngStyle]="{'background-image': 'url('+ org?.avatar_url +')'}"></div>
                 <p class="ms-font-m-plus">{{org.login}}</p>
             </li>
         </ul>
         <ul class="menu-list">
             <li><h3 class="menu-list__title ms-font-l"><i class="ms-Icon ms-Icon-large ms-Icon--sections"></i>Favorite repositories</h3></li>
-            <li class="menu-list__message ms-font-m" *ngIf="favoriteRepositories != null">This is where you'll see your favorite repositories. Click the pin next to a repository name to add it here.</li>
-            <li class="menu-list__item" *ngFor="let repository of favoriteRepositories" (click)="onSelectRepository(repository)">
-                <p class="ms-font-m">{{repository.name}}</p>
+            <li class="menu-list__message ms-font-m" *ngIf="favoriteRepositories?.length == 0">This is where you'll see your favorite repositories. Click the pin next to a repository name to add it here.</li>
+            <li class="menu-list__item" *ngFor="let repository of favoriteRepositories" (click)="selectRepository(repository)">
+                <p class="ms-font-m">{{repository.name | safenames}}</p>
                 <p class="ms-font-s">@{{repository.owner.login}}</p>
+                <div class="menu-list__item--action"><i class="ms-Icon ms-Icon-large ms-Icon--pinDown" (click)="unpin(repository)"></i></div>
             </li>
-            <li class="menu-list__overflow ms-font-s">See all repositories</li>
+            <!--<li class="menu-list__overflow ms-font-s">See all repositories</li>-->
         </ul>
     </div>
     <footer class="hamburger-menu-footer ms-font-l">
         <ul class="menu-list menu-list--footer">
-            <li class="menu-list__item menu-list__item--subtle ms-font-l">Sign Out</li>
+            <li class="menu-list__item menu-list__item--subtle ms-font-l" (click)="signOut()"><i class="ms-Icon ms-Icon-large ms-Icon--oofReply"></i>Sign Out</li>
         </ul>
     </footer>
 </section>
