--- a/WordToGitHub/src/app/login/login.component.scss
+++ b/WordToGitHub/src/app/login/login.component.scss
@@ -1,6 +1,8 @@
 ﻿/* Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See full license in root of repo. */
 
 .ms-firstrun-login {
+    position: absolute;
+    z-index: 999;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
