--- a/WordToGitHub/src/app/repo/repo.component.scss
+++ b/WordToGitHub/src/app/repo/repo.component.scss
@@ -19,6 +19,31 @@
     }
 }
 
+.repo-list-command-bar {
+    @include inline-flex();
+    list-style-type: none;
+    width: 100%;
+    border-bottom: 1px solid $background-light;
+
+    &__command {
+        padding: (40px - $default-spacing)/2 $default-spacing;
+        @include focus-states($accent-background-primary, $accent-foreground-primary);
+
+        &:hover i {
+            color: $accent-foreground-primary;
+        }
+
+        &--text {
+            flex: 1 1 0px;
+            @include ellipsis();
+
+            i {
+                padding-right: $default-spacing/2;
+            }
+        }
+    }
+}
+
 .repo-list-search {
     &__input {
         width: 100%;
