completed tree traversal workflow

--- a/WordToGitHub/src/app/file/file-tree.component.scss
+++ b/WordToGitHub/src/app/file/file-tree.component.scss
@@ -2,7 +2,11 @@
 @import '../../styles/theme.scss';
 
 .file-tree-component {
-    &__files h2 {
+    &__title {
+        padding: $default-spacing;
+    }
+
+    &__message {
         padding: $default-spacing;
     }
 }
