--- a/WordToGitHub/src/app/file/file-detail.component.html
+++ b/WordToGitHub/src/app/file/file-detail.component.html
@@ -1,12 +1,12 @@
 ﻿<article class="actions">
     <h1 class="ms-landing-page__content__title ms-font-xl  ms-fontColor-neutralSecondary ms-fontWeight-light">Booyah!</h1>
     <div class="ms-landing-page-pushButton">
-        <button id="buttonPush" class="ms-Button" (click)="onPush()"></button>
+        <button id="buttonPush" class="ms-Button" (click)="onPush()">Push</button>
     </div>
     <div class="ms-landing-page-discardButton">
-        <button id="buttonDiscard" class="ms-Button" (click)="onDiscard()"></button>
+        <button id="buttonDiscard" class="ms-Button" (click)="onDiscard()">Discard</button>
     </div>
     <div class="ms-landing-page-pullButton">
-        <button id="buttonPull" class="ms-Button" (click)="onPull()"></button>
+        <button id="buttonPull" class="ms-Button" (click)="onPull()">Pull</button>
     </div>
 </article>
