--- a/WordToGitHub/src/app/file/file-tree.component.html
+++ b/WordToGitHub/src/app/file/file-tree.component.html
@@ -1,5 +1,6 @@
-﻿<h2 class="file-tree-component__title ms-font-l ms-fontWeight-light">Files</h2>
+﻿<h2 class="file-tree-component__title ms-font-l ms-fontWeight-light">{{selectedPath || '/'}}</h2>
 <ul class="ms-List">
+    <li class="file-tree-component__message ms-font-m" *ngIf="(files| async| mdfilter)?.length == 0">Seems like there are no 'Markdown' files in this repository. You could either create one or choose a different repository.</li>
     <li class="file-tree-item ms-ListItem" *ngFor="let file of (files | async | mdfilter)">
         <div class="file-tree-item__icon"><i class="ms-Icon" [ngClass]="file.type === 'dir' ? 'ms-Icon-large ms-Icon--folder' : 'ms-Icon-large ms-Icon--document'"></i></div>
         <div class="file-tree-item__content" (click)="select(file)">
