added breadcrumbs module and routing modifications

--- a/WordToGitHub/src/app/file/file-list.component.html
+++ b/WordToGitHub/src/app/file/file-list.component.html
@@ -16,5 +16,6 @@
 </section>
 
 <section class="file-tree-component__files">
+    <breadcrumb max="2" (navigate)="navigate($event)"></breadcrumb>
     <router-outlet></router-outlet>
 </section>
