Uma added code for create new file + insert template

--- a/WordToGitHub/src/app/file/file-tree.component.html
+++ b/WordToGitHub/src/app/file/file-tree.component.html
@@ -7,16 +7,16 @@
         </div>
     </li>
     <li class="file-tree-item--separator"></li>
-    <li class="file-tree-item file-tree-item--alternate ms-ListItem">
+    <li class="file-tree-item file-tree-item--alternate ms-ListItem" (click)="createFile()" >
         <div class="file-tree-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themePrimary ms-Icon--plus"></i></div>
         <div class="file-tree-item__content">
-            <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m">Add a new file</p>
+            <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m" >Add a new file</p>
         </div>
     </li>
-    <li class="file-tree-item file-tree-item--alternate ms-ListItem">
+    <!--<li class="file-tree-item file-tree-item--alternate ms-ListItem">
         <div class="file-tree-item__icon"><i class="ms-Icon ms-Icon-large ms-fontColor-themePrimary ms-Icon--plus"></i></div>
         <div class="file-tree-item__content">
             <p class="file-tree-item__primary-text ms-ListItem-primaryText ms-fontColor-themePrimary ms-font-m">Add a new folder</p>
         </div>
-    </li>
+    </li>-->
 </ul>
