diabling search and update to subscriber management

--- a/WordToGitHub/src/app/file/file-list.component.html
+++ b/WordToGitHub/src/app/file/file-list.component.html
@@ -1,8 +1,8 @@
 ﻿<section class="file-list-component__header">
     <ul class="file-list-command-bar">
         <li class="file-list-command-bar__command" (click)="showMenu()"><i class="ms-Icon ms-Icon--menu ms-fontColor-themePrimary"></i></li>
-        <li class="file-list-command-bar__command"><i class="ms-Icon ms-Icon--search ms-fontColor-themePrimary"></i></li>
-        <li class="file-list-command-bar__command"><i class="ms-Icon ms-Icon--refresh ms-fontColor-themePrimary"></i></li>
+        <!--<li class="file-list-command-bar__command"><i class="ms-Icon ms-Icon--search ms-fontColor-themePrimary"></i></li>
+        <li class="file-list-command-bar__command"><i class="ms-Icon ms-Icon--refresh ms-fontColor-themePrimary"></i></li>-->
     </ul>
 </section>
 
