minor fix to the breadcrumb component

--- a/WordToGitHub/src/app/file/file-detail.component.html
+++ b/WordToGitHub/src/app/file/file-detail.component.html
@@ -1,5 +1,5 @@
 ﻿<article class="actions">
-    <h1 class="ms-landing-page__content__title ms-font-xl  ms-fontColor-neutralSecondary ms-fontWeight-light">Booyah!</h1>
+    <h1 class="ms-landing-page__content__title ms-font-xl  ms-fontColor-neutralSecondary ms-fontWeight-light">UI under development</h1>
     <div class="ms-landing-page-pushButton">
         <button id="buttonPush" class="ms-Button" (click)="push()">Push</button>
     </div>
