minor fixes to messaging

--- a/WordToGitHub/src/app/components/hamburger/hamburger.component.html
+++ b/WordToGitHub/src/app/components/hamburger/hamburger.component.html
@@ -4,7 +4,7 @@
         <div class="profile__image" [ngStyle]="{'background-image': 'url('+ profile?.user?.avatar_url +')'}"></div>
         <h2 class="profile__name ms-font-xl">{{profile?.user?.name}}</h2>
         <p class="profile__handle ms-font-m">@{{profile?.user?.login}}</p>
-        <p class="profile__handle ms-font-m">{{profile?.token?.access_token}}</p>
+        <!--<p class="profile__handle ms-font-m">{{profile?.token?.access_token}}</p>-->
     </div>
     <div class="hamburger-menu__container">
         <ul class="menu-list">
